Float section, example 1 and 2  has been spelled checked.

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
           <article>
             <h3>Example 1</h3>
-            <p>Starndart behaviour, no floats are used there. There just standart styles, red box with height and width and the background is also has a background color to showcase how floats affect the parent object.</p>
+            <p>The standard behavior of div within a div, the inner box has set dimensions of 70x70 and all around margin 5px. Box and parent border have been styled, but no elements have been floated here.</p>
             <div class="exampleBackground">
               <div class="floatExampleWrap">
                 <div class="floatExampleBox"></div>
@@ -254,7 +254,7 @@
 
           <article>
             <h3>Example 2</h3>
-            <p>Here is another example with two objects, text and our red box. Same visual styles are applied here as most of the examples in this section.</p>
+            <p>In this example, you can see the standard look of two objects within a parent div, a box, and some text. The Same visual styles have been applied as example 1 as there are for most of the example in this section. Again, no floats have been used.</p>
             <div class="exampleBackground">
               <div class="floatExampleWrap group">
                 <div class="floatExampleBox">
