--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -43,7 +44,19 @@
   </header>
 
   <section style="height: 100vh;">
+    <!-- html5 tags -->
+  </section>
 
+  <section>
+    <!-- floats -->
+  </section>
+  
+  <section>
+    <!-- flexbox -->
+  </section>
+
+  <section>
+    <!-- grid -->
   </section>
 
   <aside class="toTopBtn">
