style additions, small fixes, and npm dependency update

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -43,14 +42,24 @@
     </div>
   </header>
 
-  <section style="height: 100vh;">
-    <!-- html5 tags -->
+  <section class="siteSection">     <!-- html5 tags -->
+    <h1 class="siteSection__heading">HTML5 Tags</h1>
+    
+    <article class="dev-article">
+      <h2 class="dev-article__title"><b>&lt;b&gt;</b> and <b>&lt;strong&gt;</b></h2>
+      <p class="dev-article__text">Both of these tags will make text look bold. The second tag also describes a higher text importance than the first. Also, according to the HTML 5 specification, the <b>&lt;b&gt;</b> tag should only be used as a LAST resort when no other tag is more appropriate.</p>
+      <div class="dev-article__example-wrap">
+        <p class="dev-article__code-input">HTML : &lt;b&gt;bold text&lt;&sol;b&gt;</p>
+        <p class="dev-article__code-output">Result : <b>bold text</b></p>
+      </div>
+    </article>
+
   </section>
 
   <section>
     <!-- floats -->
   </section>
-  
+
   <section>
     <!-- flexbox -->
   </section>
