--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <nav class="mainNav">
       <ul class="mainNav__wrap" data-active="false">
         <li>
-          <a class="mainNav__item mainNav__item--first" href="">HTML5 Tags</a>
+          <a class="mainNav__item mainNav__item--first" href="">HTML Tags</a>
         </li>
         <li>
           <a class="mainNav__item" href="">Floats</a>
@@ -42,9 +42,8 @@
     </div>
   </header>
 
-  <section class="siteSection">
-    <!-- html5 tags -->
-    <h1 class="siteSection__heading">HTML5 Tags</h1>
+  <section class="siteSection">    <!-- html tags -->
+    <h1 class="siteSection__heading">HTML Tags</h1>
     <div class="siteSection__sub-wrap">
       <article class="dev-article">
         <h2 class="dev-article__title"><b>&lt;b&gt;</b> and <b>&lt;strong&gt;</b></h2>
@@ -62,140 +61,248 @@
       </article>
 
       <article class="dev-article">
-          <h2 class="dev-article__title"><strong>&lt;i&gt;</strong> and <strong>&lt;em&gt;</strong></h2>
-          <p class="dev-article__text">Both tags will make a text look italic. The second tag also describes a higher emphasis than the first. Also, according to the HTML 5 specification, the <strong>&lt;i&gt;</strong> tag should be only used as a LAST resort when no other tag is more appropriate.</p>
-          <div class="code-example">
-            <div class="code-example__code-input">
-              <p class="code-example__title">HTML:</p>
-              <p>&lt;i&gt;italic text&lt;&sol;i&gt;</p>
-            </div>
-            <div class="code-example__code-output">
-              <p class="code-example__title">Result:</p>
-              <i>italic text</i>
-            </div>
+        <h2 class="dev-article__title"><strong>&lt;i&gt;</strong> and <strong>&lt;em&gt;</strong></h2>
+        <p class="dev-article__text">Both tags will make a text look italic. The second tag also describes a higher
+          emphasis than the first. Also, according to the HTML 5 specification, the <strong>&lt;i&gt;</strong> tag
+          should be only used as a LAST resort when no other tag is more appropriate.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>&lt;i&gt;italic text&lt;&sol;i&gt;</p>
           </div>
-        </article>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <i>italic text</i>
+          </div>
+        </div>
+      </article>
 
       <article class="dev-article">
-          <h2 class="dev-article__title"><strong>&lt;br&gt;</strong></h2>
-          <p class="dev-article__text">This tag inserts a single line break. This line serves as the 'enter' key for the webpage, as it does on a word document. Also, this is an empty self-closing tag which means that it has no need for the extra closing tag.</p>
-          <div class="code-example">
-            <div class="code-example__code-input">
-              <p class="code-example__title">HTML:</p>
-              <p>&lt;br &sol;&gt; Text</p>
-            </div>
-            <div class="code-example__code-output">
-              <p class="code-example__title">Result:</p>
-              <p><br />Text</p>
-            </div>
+        <h2 class="dev-article__title"><strong>&lt;span&gt;</strong></h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>&lt;span&gt;sample text&lt;&sol;span&gt;</p>
           </div>
-        </article>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <span>sample text</span>
+          </div>
+        </div>
+      </article>
 
       <article class="dev-article">
-          <h2 class="dev-article__title"><strong>&lt;hr&gt;</strong></h2>
-          <p class="dev-article__text">This element is used to separate content (or define a change) in the HTML page. This tag puts a nice line across the whole page within the box model of the parent element. This tag is mainly used as a separator for different articles.</p>
-          <div class="code-example">
-            <div class="code-example__code-input">
-              <p class="code-example__title">HTML:</p>
-              <p>&lt;hr &sol;&gt; Text </p>
-            </div>
-            <div class="code-example__code-output">
-              <p class="code-example__title">Result:</p>
-              <hr />
-              <p>Text </p>
-            </div>
+        <h2 class="dev-article__title"><strong>&lt;em&gt;</strong></h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>&lt;em&gt;sample text&lt;&sol;em&gt;</p>
           </div>
-        </article>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <em>sample text</em>
+          </div>
+        </div>
+      </article>
 
       <article class="dev-article">
-          <h2 class="dev-article__title"><strong>&lt;p&gt;</strong></h2>
-          <p class="dev-article__text">This is the paragraph tag, widely used for containing a block of a text. This paragraph has some default left margin from the user agent CSS.</p>
-          <div class="code-example">
-            <div class="code-example__code-input">
-              <p class="code-example__title">HTML:</p>
-              <p>&lt;p&gt;Text&lt;&sol;p&gt;</p>
-            </div>
-            <div class="code-example__code-output">
-              <p class="code-example__title">Result:</p>
-              <p>Text</p>
-            </div>
+        <h2 class="dev-article__title"><strong>&lt;code&gt;</strong></h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>&lt;code&gt;sample text&lt;&sol;code&gt;</p>
           </div>
-        </article>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <code>sample text</code>
+          </div>
+        </div>
+      </article>
 
       <article class="dev-article">
-          <h2 class="dev-article__title"><strong>&lt;ins&gt;</strong></h2>
-          <p class="dev-article__text">This tag is to be used to notify users that some new text that has been additionally inserted into some other text. By default, the browsers display an underline to make the text stand out. As far as I have seen, this reason this the tag is often not seen compared to its counterpart &lt;del&gt;.</p>
-          <div class="code-example">
-            <div class="code-example__code-input">
-              <p class="code-example__title">HTML:</p>
-              <p>&lt;ins&gt;Text&lt;ins&gt;</p>
-            </div>
-            <div class="code-example__code-output">
-              <p class="code-example__title">Result:</p>
-              <p><ins>Text</ins></p>
-            </div>
+        <h2 class="dev-article__title"><strong>&lt;samp&gt;</strong></h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>&lt;samp&gt;sample text&lt;&sol;samp&gt;</p>
           </div>
-        </article>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <samp>sample text</samp>
+          </div>
+        </div>
+      </article>
+
 
       <article class="dev-article">
-          <h2 class="dev-article__title"><strong>&lt;s&gt;</strong></h2>
-          <p class="dev-article__text">This tag is similar to the &lt;del&gt; tag, The difference is that text is not relevant anymore, yet not deleted. This tag can be used by online shops to highlight a price discount.</p>
-          <div class="code-example">
-            <div class="code-example__code-input">
-              <p class="code-example__title">HTML:</p>
-              <p>Price: &lt;s&gt;&pound;199&lt;&sol;s&gt;</p>
-            </div>
-            <div class="code-example__code-output">
-              <p class="code-example__title">Result:</p>
-              <p>Price: <del>&pound;199</del></p>
-            </div>
+        <h2 class="dev-article__title"><strong>&lt;kbd&gt;</strong></h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>&lt;kbd&gt;sample text&lt;&sol;kbd&gt;</p>
           </div>
-        </article>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <kbd>sample text</kbd>
+          </div>
+        </div>
+      </article>
 
       <article class="dev-article">
-          <h2 class="dev-article__title"><strong>&lt;del&gt;</strong></h2>
-          <p class="dev-article__text">This tag is to be used on text that is to be displayed as deleted, but kept as a reference. This tag is usually used in blogs websites where the incorrect text is marked, but not deleted. Usually to show that the text was wrong, and corrected. The &lt;s&gt; and &lt;del&gt; tags display identically in the browser, the extra that they do is give more meanings to the screen readers which is important for serious websites.</p>
-          <div class="code-example">
-            <div class="code-example__code-input">
-              <p class="code-example__title">HTML:</p>
-              <p>It was my &lt;del&gt;worst&lt;&sol;del&gt; idea.</p>
-            </div>
-            <div class="code-example__code-output">
-              <p class="code-example__title">Result:</p>
-              <p>It was my <del>worst</del> best idea.</p>
-            </div>
+        <h2 class="dev-article__title"><strong>&lt;var&gt;</strong></h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>&lt;var&gt;sample text&lt;&sol;var&gt;</p>
           </div>
-        </article>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <var>sample text</var>
+          </div>
+        </div>
+      </article>
 
       <article class="dev-article">
-          <h2 class="dev-article__title"><strong>&lt;mark&gt;</strong></h2>
-          <p class="dev-article__text">This tag is to be used to define and highlight parts of your text in a way a marker would on a piece of paper.</p>
-          <div class="code-example">
-            <div class="code-example__code-input">
-              <p class="code-example__title">HTML:</p>
-              <p>&lt;mark&gt;Text&lt;&sol;mark&gt;</p>
-            </div>
-            <div class="code-example__code-output">
-              <p class="code-example__title">Result:</p>
-              <p><mark>Text</mark></p>
-            </div>
+        <h2 class="dev-article__title"><strong>&lt;br&gt;</strong></h2>
+        <p class="dev-article__text">This tag inserts a single line break. This line serves as the 'enter' key for the
+          webpage, as it does on a word document. Also, this is an empty self-closing tag which means that it has no
+          need for the extra closing tag.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>&lt;br &sol;&gt; Text</p>
           </div>
-        </article>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <p><br />Text</p>
+          </div>
+        </div>
+      </article>
 
       <article class="dev-article">
-          <h2 class="dev-article__title"><strong>&lt;sup&gt;</strong></h2>
-          <p class="dev-article__text">This tag defines superscript text. Superscript text appears half a character above the normal line and is rendered in a smaller font.</p>
-          <div class="code-example">
-            <div class="code-example__code-input">
-              <p class="code-example__title">HTML:</p>
-              <p>5&lt;sup&gt;th&lt;sup&sol;&gt;</p>
-            </div>
-            <div class="code-example__code-output">
-              <p class="code-example__title">Result:</p>
-              <p>5<sup>th</sup></p>
-            </div>
+        <h2 class="dev-article__title"><strong>&lt;hr&gt;</strong></h2>
+        <p class="dev-article__text">This element is used to separate content (or define a change) in the HTML page.
+          This tag puts a nice line across the whole page within the box model of the parent element. This tag is
+          mainly used as a separator for different articles.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>&lt;hr &sol;&gt; Text </p>
           </div>
-        </article>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <hr />
+            <p>Text </p>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title"><strong>&lt;p&gt;</strong></h2>
+        <p class="dev-article__text">This is the paragraph tag, widely used for containing a block of a text. This
+          paragraph has some default left margin from the user agent CSS.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>&lt;p&gt;Text&lt;&sol;p&gt;</p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <p>Text</p>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title"><strong>&lt;ins&gt;</strong></h2>
+        <p class="dev-article__text">This tag is to be used to notify users that some new text that has been
+          additionally inserted into some other text. By default, the browsers display an underline to make the text
+          stand out. As far as I have seen, this reason this the tag is often not seen compared to its counterpart
+          &lt;del&gt;.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>&lt;ins&gt;Text&lt;ins&gt;</p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <p><ins>Text</ins></p>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title"><strong>&lt;s&gt;</strong></h2>
+        <p class="dev-article__text">This tag is similar to the &lt;del&gt; tag, The difference is that text is not
+          relevant anymore, yet not deleted. This tag can be used by online shops to highlight a price discount.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>Price: &lt;s&gt;&pound;199&lt;&sol;s&gt;</p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <p>Price: <del>&pound;199</del></p>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title"><strong>&lt;del&gt;</strong></h2>
+        <p class="dev-article__text">This tag is to be used on text that is to be displayed as deleted, but kept as a
+          reference. This tag is usually used in blogs websites where the incorrect text is marked, but not deleted.
+          Usually to show that the text was wrong, and corrected. The &lt;s&gt; and &lt;del&gt; tags display
+          identically in the browser, the extra that they do is give more meanings to the screen readers which is
+          important for serious websites.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>It was my &lt;del&gt;worst&lt;&sol;del&gt; idea.</p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <p>It was my <del>worst</del> best idea.</p>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title"><strong>&lt;mark&gt;</strong></h2>
+        <p class="dev-article__text">This tag is to be used to define and highlight parts of your text in a way a
+          marker would on a piece of paper.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>&lt;mark&gt;Text&lt;&sol;mark&gt;</p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <p><mark>Text</mark></p>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title"><strong>&lt;sup&gt;</strong></h2>
+        <p class="dev-article__text">This tag defines superscript text. Superscript text appears half a character above
+          the normal line and is rendered in a smaller font.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>5&lt;sup&gt;th&lt;sup&sol;&gt;</p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <p>5<sup>th</sup></p>
+          </div>
+        </div>
+      </article>
 
       <article class="dev-article">
         <h2 class="dev-article__title"><strong>&lt;sub&gt;</strong></h2>
@@ -276,6 +383,21 @@
           <div class="code-example__code-output">
             <p class="code-example__title">Result:</p>
             <p><q>Don't cry because it's over, smile because it happened.</q> &ndash; Dr. Seuss</p>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title"><strong>&lt;small&gt;</strong></h2>
+        <p class="dev-article__text"></p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p>&lt;small&gt;small text&lt;&sol;small&gt;</p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <small>small text</small>
           </div>
         </div>
       </article>
