--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,8 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title"><b>&lt;b&gt;</b> and <b>&lt;strong&gt;</b></h2>
-        <p class="dev-article__text">Both of these tags will make text look bold. The &lt;strong&gt; tag also describes higher text importance than the first. Also, according to the HTML 5 specification, the <strong>&lt;b&gt;</strong>
+        <p class="dev-article__text">Both of these tags will make text look bold. The &lt;strong&gt; tag also describes
+          higher text importance than the first. Also, according to the HTML 5 specification, the <strong>&lt;b&gt;</strong>
           tag should only be used as a LAST resort, when no other tag is more appropriate.</p>
         <div class="code-example">
           <div class="code-example__code-input">
@@ -82,7 +83,10 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title"><strong>&lt;span&gt;</strong></h2>
-        <p class="dev-article__text">This tag is used to group inline elements on the page. The tag itself provides no visual change, but you can use it as a hook to gain access to it with CSS or JS. For example if you want to change a part of a text with different style or layout, you will wrap the desired text in this tag, add some class and target it with CSS.</p>
+        <p class="dev-article__text">This tag is used to group inline elements on the page. The tag itself provides no
+          visual change, but you can use it as a hook to gain access to it with CSS or JS. For example if you want to
+          change a part of a text with different style or layout, you will wrap the desired text in this tag, add some
+          class and target it with CSS.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML:</p>
@@ -97,7 +101,9 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title"><strong>&lt;em&gt;</strong></h2>
-        <p class="dev-article__text">This is tag used to emphasize parts of a text. Makes a text, or text within a text to stand out a bit. You can also use it as a hook for CSS and JS, as the span tag, but have it be more semantic for particular cases.</p>
+        <p class="dev-article__text">This is tag used to emphasize parts of a text. Makes a text, or text within a text
+          to stand out a bit. You can also use it as a hook for CSS and JS, as the span tag, but have it be more
+          semantic for particular cases.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML:</p>
@@ -112,7 +118,10 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title"><strong>&lt;code&gt;</strong></h2>
-        <p class="dev-article__text">This tag is used to define a piece of computer code. You can use it to wrap some of your favorite snippet that you want to post on your site. Like a lot of other tags, it's mostly for writing semantic code. But you can target this particular tag with JS and CSS to make it highlighted like a proper editor and make it look really nice and pretty.</p>
+        <p class="dev-article__text">This tag is used to define a piece of computer code. You can use it to wrap some
+          of your favorite snippet that you want to post on your site. Like a lot of other tags, it's mostly for
+          writing semantic code. But you can target this particular tag with JS and CSS to make it highlighted like a
+          proper editor and make it look really nice and pretty.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML:</p>
@@ -127,7 +136,9 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title"><strong>&lt;samp&gt;</strong></h2>
-        <p class="dev-article__text">This tag is used to wrap the output of the computer program. So, for example, if you have a little console web application within your site, you can use this tag to wrap your console command returns. This will make it semantic, and you can use it as a hook to style it or to access it with JS.</p>
+        <p class="dev-article__text">This tag is used to wrap the output of the computer program. So, for example, if
+          you have a little console web application within your site, you can use this tag to wrap your console command
+          returns. This will make it semantic, and you can use it as a hook to style it or to access it with JS.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML:</p>
@@ -143,7 +154,9 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title"><strong>&lt;kbd&gt;</strong></h2>
-        <p class="dev-article__text">This tag is used to define keyboard input. For example, if you have a little application that requires you to enter something, and there isn't another more semantic tag, you can use this one. Like all others, it can be used as a hook for CSS styling or JS logic.</p>
+        <p class="dev-article__text">This tag is used to define keyboard input. For example, if you have a little
+          application that requires you to enter something, and there isn't another more semantic tag, you can use this
+          one. Like all others, it can be used as a hook for CSS styling or JS logic.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML:</p>
@@ -158,7 +171,8 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title"><strong>&lt;var&gt;</strong></h2>
-        <p class="dev-article__text">This tag is used to define a variable. You might use it as a hook and style specific piece of text which is your variables within a text or stands alone text.</p>
+        <p class="dev-article__text">This tag is used to define a variable. You might use it as a hook and style
+          specific piece of text which is your variables within a text or stands alone text.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML:</p>
@@ -208,7 +222,7 @@
       <article class="dev-article">
         <h2 class="dev-article__title"><strong>&lt;p&gt;</strong></h2>
         <p class="dev-article__text">This is the paragraph tag, widely used for containing a block of text. This
-            paragraph tags come some default left margin from the user agent CSS.</p>
+          paragraph tags come some default left margin from the user agent CSS.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML:</p>
@@ -356,7 +370,8 @@
       <article class="dev-article">
         <h2 class="dev-article__title"><strong>&lt;dfn&gt;</strong></h2>
         <p class="dev-article__text">This tag is used to explain new terminologies. They call it the defining instance
-          of a new term. So if you are describing something complicated like a hedge fund you would use this tag. This will be used
+          of a new term. So if you are describing something complicated like a hedge fund you would use this tag. This
+          will be used
           by screen readers,
           most browsers would not do anything to the text itself, but some would make the text italic.</p>
         <div class="code-example">
@@ -389,7 +404,9 @@
 
       <article class="dev-article">
         <h2 class="dev-article__title"><strong>&lt;small&gt;</strong></h2>
-        <p class="dev-article__text">This tag is used to define small text or any side comment that you want to deemphasize. It is usually used within the footer of the site for the copyright info as by default as it's smaller.</p>
+        <p class="dev-article__text">This tag is used to define small text or any side comment that you want to
+          deemphasize. It is usually used within the footer of the site for the copyright info as by default as it's
+          smaller.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML:</p>
@@ -406,26 +423,26 @@
         <h2 class="dev-article__title"><strong>&lt;backquote&gt;</strong></h2>
         <p class="dev-article__text">This tag is used to define and reference a full paragraph quote. This tag is very
           similar to the &lt;q&gt; tag, but the &lt;q&gt; is for short one or two sentences quotes.</p>
-          <div class="code-example">
-            <div class="code-example__code-input">
-              <p class="code-example__title">HTML:</p>
-              <p class="no-margin">&lt;backquote&gt;</p>
-              <p class="code-example__indent-1">&lt;p&gt;</p>
-              <p class="code-example__indent-2">You've gotta dance like there's nobody &lt;br&gt;<br> watching, Love
-                like
-                you'll never be hurt, Sing like &lt;br&gt;<br> there's nobody listening, And live like it's heaven
-                &lt;br&gt;<br> on earth. &ndash; William W. Purkey</p>
-              <p class="code-example__indent-1">&lt;&sol;p&gt;</p>
-              <p>&lt;&sol;backquote&gt;</p>
-            </div>
-            <div class="code-example__code-output">
-              <p class="code-example__title">Result:</p>
-              <backquote class="" cite="https://www.goodreads.com/quotes/10123-you-ve-gotta-dance-like-there-s-nobody-watching-love-like-you-ll">
-                <p>You've gotta dance like there's nobody <br> watching, Love like you'll never be hurt, Sing like <br>
-                  there's nobody listening, And live like it's heaven <br> on earth. &ndash; William W. Purkey</p>
-              </backquote>
-            </div>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p class="no-margin">&lt;backquote&gt;</p>
+            <p class="code-example__indent-1">&lt;p&gt;</p>
+            <p class="code-example__indent-2">You've gotta dance like there's nobody &lt;br&gt;<br> watching, Love
+              like
+              you'll never be hurt, Sing like &lt;br&gt;<br> there's nobody listening, And live like it's heaven
+              &lt;br&gt;<br> on earth. &ndash; William W. Purkey</p>
+            <p class="code-example__indent-1">&lt;&sol;p&gt;</p>
+            <p>&lt;&sol;backquote&gt;</p>
           </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <backquote class="" cite="https://www.goodreads.com/quotes/10123-you-ve-gotta-dance-like-there-s-nobody-watching-love-like-you-ll">
+              <p>You've gotta dance like there's nobody <br> watching, Love like you'll never be hurt, Sing like <br>
+                there's nobody listening, And live like it's heaven <br> on earth. &ndash; William W. Purkey</p>
+            </backquote>
+          </div>
+        </div>
       </article>
 
       <article class="dev-article">
@@ -467,17 +484,99 @@
     <div class="siteSection__sub-wrap">
 
       <article class="dev-article">
-        <h2 class="dev-article__title"></h2>
-        <p class="dev-article__text"></p>
+        <h2 class="dev-article__title">Example 1</h2>
+        <p class="dev-article__text">The standard behavior of div within a div, the inner box has set dimensions of
+          70x70 and all around margin 5px. Box and parent border have been styled, but no elements have been floated
+          here.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+            <p></p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="float-wrap">
+              <div class="float-box"></div>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title">Example 2</h2>
+        <p class="dev-article__text">In this example, you can see the standard look of two objects within a parent div,
+          a box, and some text. The Same visual styles have been applied as example 1 as there are for most of the
+          example in this section. Again, no floats have been used.</p>
         <div class="code-example">
           <div class="code-example__code-input">
             <p class="code-example__title">HTML:</p>
           </div>
           <div class="code-example__code-output">
             <p class="code-example__title">Result:</p>
+            <div class="float-wrap">
+              <div class="float-box"></div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id perferendis totam quas tenetur dolore
+                omnis beatae perspiciatis itaque voluptatum blanditiis. Dignissimos deleniti inventore optio totam
+                voluptatibus eius molestiae impedit facilis, dolore tenetur similique explicabo provident, quaerat
+                corrupti cupiditate fuga, dolorum.</p>
+            </div>
           </div>
         </div>
       </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title">Example 3</h2>
+        <p class="dev-article__text">Red box is floated to the left.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="float-wrap">
+              <div class="float-box float-left"></div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id perferendis totam quas tenetur dolore
+                omnis beatae perspiciatis itaque voluptatum blanditiis. Dignissimos deleniti inventore optio totam
+                voluptatibus eius molestiae impedit facilis, dolore tenetur similique explicabo provident, quaerat
+                corrupti cupiditate fuga, dolorum.</p>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+        <h2 class="dev-article__title">Example 4</h2>
+        <p class="dev-article__text">Two red boxes are floated to the right.</p>
+        <div class="code-example">
+          <div class="code-example__code-input">
+            <p class="code-example__title">HTML:</p>
+          </div>
+          <div class="code-example__code-output">
+            <p class="code-example__title">Result:</p>
+            <div class="float-wrap">
+              <div class="float-box float-right"></div>
+              <div class="float-box float-right"></div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id perferendis totam quas tenetur dolore
+                omnis beatae perspiciatis itaque voluptatum blanditiis. Dignissimos deleniti inventore optio totam
+                voluptatibus eius molestiae impedit facilis, dolore tenetur similique explicabo provident, quaerat
+                corrupti cupiditate fuga, dolorum.</p>
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article class="dev-article">
+          <h2 class="dev-article__title">Example 5</h2>
+          <p class="dev-article__text">Red box is floated right. No float clearfix is used on parent.</p>
+          <div class="code-example">
+            <div class="code-example__code-input">
+              <p class="code-example__title">HTML:</p>
+            </div>
+            <div class="code-example__code-output">
+              <p class="code-example__title">Result:</p>
+            </div>
+          </div>
+        </article>
 
     </div>
   </section>
